# bk-over-ssh

./: .gitignore  Cargo.toml  README.md  ak.json  build.rs  develope_env_template.yaml  server_template.yaml  tip.md
.github/workflows/: rust.yml
fixtures/: linux_remote_item_dir.json  linux_remote_item_dir.txt  windows_remote_item_dir.txt
fixtures/bdir/: 鮮やか
src/: 17_yaml.yml  app_config_demo.yml  develope_data.rs  ioutil.rs  lib.rs  log_util.rs  main.rs  server_template.yaml
src/actions/: channel_util.rs  copy_file.rs  mod.rs  reporter.rs  ssh_util.rs
src/command/: app_config_demo.yml  archives.rs  client_loop.rs  db_cmd.rs  misc.rs  mod.rs  rsync.rs  server_loop.rs  sync_dirs.rs
src/data_shape/: app_conf.rs  channel_wrapper.rs  client_push_pb.rs  count_reader.rs  count_writer.rs  data_shape_util.rs  disk_directory.rs  file_item copy.rs  file_item.rs  file_item_directory.rs  file_item_line.rs  file_item_map.rs  full_path_item.rs  indicator.rs  mod.rs  push_file_item_directory.rs  relative_file_item.rs  remote_file_item.rs  remote_file_item_line.rs  rolling_files.rs  server.rs  server_deleted.rs  sha1_reader.rs  string_path.rs  writer_with_progress.rs
src/db_accesses/: mod.rs  scheduler_util.rs  sqlite_access.rs
src/develope/: develope_data.rs  knowledge.rs  mod.rs  rsync.rs  tutil.rs
src/mail/: mail_util.rs  mod.rs
src/protocol/: error.rs  exchange.rs  mod.rs  reader.rs
src/rustsync/: delta_file.rs  delta_mem.rs  mod.rs  origin.rs  record.rs
src/sqlite_db/: db.rs  mod.rs
src/sqlite_func/: db.rs  mod.rs  scheduler_util.rs
test/: knowledge.rs
