[package]
name = "ssh-client-demo"
version = "0.1.0"
authors = ["libo <jianglibo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.3"
log = "0.4"
env_logger = "0.6"
fern = { version = "0.5", features = ["colored"] }
failure = "0.1"
rustyline = "5.0.1"


# http://ticki.github.io/blog/making-terminal-applications-in-rust-with-termion/