[package]
name = "ssh-client-demo"
version = "0.1.0"
authors = ["libo <jianglibo@gmail.com>"]
edition = "2018"
default-run = "rsync_main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.3"
log = "0.4"
env_logger = "0.6"
fern = { version = "0.5", features = ["colored"] }
failure = "0.1"
rustyline = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
sha2 = "0.8.0"
sha-1 = "0.8.1"
derive_builder =  "0.7.2"
walkdir = "2"
rustsync = "0.2"
rand = "0.7"
librsync = "0.2"
tempfile = "3"

# https://docs.rs/crate/rustsync/0.2.3
[dependencies.clap]
version = "~2.33"
default-features = false
features = ["suggestions", "color", "yaml"]

# [[bin]]
# name = "mybin"
# path = "src/main.rs"

[lib]
name = "ssh_client_demo"
path = "src/lib.rs"

# http://ticki.github.io/blog/making-terminal-applications-in-rust-with-termion/

# add the lines below to ~/.bashrc
# export RUSTUP_DIST_SERVER=https://mirrors.sjtug.sjtu.edu.cn/rust-static
# export RUSTUP_UPDATE_ROOT=https://mirrors.sjtug.sjtu.edu.cn/rust-static/rustup