[package]
name = "bk-over-ssh"
version = "0.1.0"
authors = ["libo <hmkj@gmail.com>"]
edition = "2018"
# default-run = "rsync_main"
# pick a binary for cargo run.
default-run = "bk-over-ssh"


# build = false
# build = "custom_build_name.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
fern = { version = "0.5", features = ["colored"] }
failure = "0.1"
# rustyline = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
sha-1 = "0.8.1"
derive_builder =  "0.9.0"
walkdir = "2"
# rustsync = "0.2"
rand = "0.7"
# librsync = "0.2"
tempfile = "3"
adler32 = "1.0.4"
blake2-rfc = "0.2.18"
glob = "0.3.0"
filetime = "0.2"
ssh2 = {version = "0.6.0", features = ["vendored-openssl"]}
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bzip2 = "0.3"
indicatif = "0.13.0"
rayon = "1.2.1"
lettre = "0.9"
lettre_email = "0.9"
askama = "0.8"
cron = "0.6.0"
r2d2 = "0.8.7"
r2d2_sqlite = "0.12.0"
lazy_static = "1.4.0"
# ctrlc = { version = "3", features = ["termination"] }
itertools = "0.8"
time = "0.1"
dirs = "2.0.2"
job_scheduler = "*"
base64 = "0.11.0"
bytes = "0.5.0"
# zip = "0.5.3"
# https://docs.rs/crate/rustsync/0.2.3
[dependencies.clap]
version = "~2.33"
default-features = false
features = ["suggestions", "color", "yaml"]

[dependencies.encoding_rs]
version = "0.8.20"

# https://docs.rs/vcpkg/0.2.7/vcpkg/
# https://github.com/microsoft/vcpkg/blob/master/docs/examples/installing-and-using-packages.md
# set env, export VCPKGRS_DYNAMIC=1, Set-Item -path env:TEAMS -value ($env:TEAMS + 'finance')
# export VCPKG_ROOT=/home/jianglibo/ws/vcpkg
# unset VCPKGRS_DYNAMIC
# permanently system wide set environment variable, go /etc/environment
[dependencies.rusqlite]
version = "0.20.0"
features = ["chrono"]

#https://stackoverflow.com/questions/41742046/is-there-a-list-of-all-cfg-features

# [target.'cfg(windows)'.dependencies]
# ssh2 = {git="https://github.com/wez/ssh2-rs", branch="win10dh"}

# [target.'cfg(unix)'.dependencies]
# ssh2 = "0.3"

[dev-dependencies]
sha2 = "0.8.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"


# cargo build --bin name
[[bin]]
name = "bk-over-ssh"
path = "src/main.rs"

#[[bin]]
#name = "bk-over-ssh-centos6"
#path = "src/main.rs"

# [lib]
# name = "bk_over_ssh"
# path = "src/lib.rs"

# http://ticki.github.io/blog/making-terminal-applications-in-rust-with-termion/

# add the lines below to ~/.bashrc
# export RUSTUP_DIST_SERVER=https://mirrors.sjtug.sjtu.edu.cn/rust-static
# export RUSTUP_UPDATE_ROOT=https://mirrors.sjtug.sjtu.edu.cn/rust-static/rustup

[build-dependencies]
vcpkg = "0.2.8"
# vcpkg = { version = "0.2.7", path = "../vcpkg-rs/vcpkg" }